# asca-ci

./: .env.example  .gitignore  AUDIT_AND_ROADMAP.md  CLAUDE.md  CMakeLists.txt  Dockerfile  README.md  SECURITY.md  appveyor.yml  config.lua.dist  docker-compose.yml  docker-entrypoint.sh  key.pem.example  schema.sql  vcpkg.json
.github/workflows/: build-ubuntu.yml  build-vcpkg.yml  coverity.yml  docker-image.yml  lua-syntax.yml  tests.yml  xml-syntax.yml
cmake/: FindMySQL.cmake
data/XML/: stages.xml  vocations.xml
data/actions/: actions.xml
data/actions/scripts/: crafting_station.lua  dungeon_entrance.lua  mining_node.lua
data/actions/scripts/crafting/: cooking.lua  enchanting.lua  farming.lua  mining.lua  smelting.lua  smithing.lua
data/actions/scripts/quests/: arena_champion.lua  catacombs_entrance.lua  dragon_quest_reward.lua  dungeon_boss_reward.lua  hunter_task_reward.lua  nature_faction_reward.lua  pirate_treasure.lua  royal_faction_reward.lua  shadow_faction_reward.lua  wanderer_treasure.lua
data/actions/scripts/tools/: fishing_enhanced.lua  pick.lua
data/creaturescripts/: creaturescripts.xml
data/creaturescripts/scripts/: achievement_check.lua  firstitems.lua  kill_tracker.lua  login.lua  logout.lua  loot_attributes.lua  pvp_death.lua  pvp_handler.lua  pvp_kill.lua  task_kill.lua
data/events/: events.xml
data/globalevents/: globalevents.xml
data/globalevents/scripts/: daily_raid.lua  daily_reset.lua  seasonal_checker.lua  server_monitor.lua  serversave.lua  startup.lua
data/items/: items.xml
data/lib/: achievement_system.lua  bestiary_system.lua  crafting.lua  crafting_cooking.lua  crafting_enchanting.lua  crafting_farming.lua  crafting_lib.lua  crafting_mining.lua  crafting_smithing.lua  daily_rewards.lua  faction_system.lua  guild_enhanced.lua  housing_enhanced.lua  imbuing_system.lua  item_attributes.lua  item_ranks.lua  legendary_items.lua  lib.lua  party_enhanced.lua  prey_system.lua  pvp_systems.lua  retro_pvp.lua  seasonal_events.lua  server_monitor.lua  storage_keys.lua  task_system.lua  weekly_dungeons.lua
data/migrations/: 28.lua  29.lua  30.lua  31.lua  32.lua  33.lua  34.lua  35.lua  36.lua  37.lua  38.lua  39.lua  40.lua
data/monster/: monsters.xml
data/monster/monsters/: grand_dragon_lord.xml
data/movements/: movements.xml
data/npc/: Alara.xml  Artemis.xml  Barthos.xml  Beggar Tom.xml  Blackbeard.xml  Commander Thane.xml  Corbin.xml  Elara.xml  Elder Oakroot.xml  Elena.xml  Father Aldric.xml  Fisherman Jack.xml  Gate Guard.xml  Gemma.xml  Gerald.xml  Gladius.xml  Grand Vizier.xml  Grubbin.xml  Guard Captain.xml  Guard Hector.xml  Guard Mira.xml  Gustavo.xml  Harlan.xml  Helena.xml  Ironforge.xml  Karthus.xml  King Aldric.xml  Marcus.xml  Mirael.xml  Monk Samuel.xml  Mystic Aria.xml  Nadia.xml  Old Pete.xml  Pyraxis.xml  Rosalind.xml  Sahara.xml  Sergeant Kael.xml  Shadow Master Vex.xml  Spectral Scholar.xml  Stable Master.xml  (+6 more)
data/npc/scripts/: alara.lua  artemis.lua  barthos.lua  beggar_tom.lua  blackbeard.lua  commander_thane.lua  corbin.lua  elara.lua  elder_oakroot.lua  elena.lua  father_aldric.lua  fisherman_jack.lua  gemma.lua  gerald.lua  gladius.lua  grand_vizier.lua  grubbin.lua  guard_ambient.lua  gustavo.lua  harlan.lua  helena.lua  ironforge.lua  karthus.lua  king_aldric.lua  marcus.lua  mirael.lua  monk_samuel.lua  mystic_aria.lua  nadia.lua  old_pete.lua  pyraxis.lua  rosalind.lua  sahara.lua  sergeant_kael.lua  shadow_vex.lua  spectral_scholar.lua  stable_master.lua  the_wanderer.lua  tormund.lua  town_crier.lua  (+2 more)
data/raids/: ancient_scarab_swarm.xml  bandit_raid.xml  cyclops_rampage.xml  demon_gate.xml  dragonlord_invasion.xml  fire_elemental_storm.xml  frost_dragon_assault.xml  giant_spider_infestation.xml  ice_witch_coven.xml  necromancer_ritual.xml  orc_horde.xml  raids.xml  sea_monster_attack.xml  undead_rising.xml  vampire_night.xml  war_wolf_pack.xml
data/scripts/creaturescripts/: loot_attributes.lua
data/spells/: spells.xml
data/talkactions/: talkactions.xml
data/talkactions/scripts/: admin_panel.lua  faction.lua  imbue.lua  moderation.lua  party.lua  prey.lua  pvp.lua  recipes.lua  tasks.lua
data/weapons/: weapons.xml
docs/: audit-cpp-issues.md  phase1-retro-pvp.md  phase1-skills.md  phase1-vocations.md  phase2-crafting-overview.md  phase3-equipment-rebalance.md  phase3-items.md  phase4-quest-content.md  phase5-social-systems.md
src/: CMakeLists.txt  actions.cpp  actions.h  ban.cpp  ban.h  base64.cpp  base64.h  baseevents.h  bed.cpp  bed.h  chat.cpp  chat.h  combat.cpp  combat.h  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.h  cylinder.h  database.cpp  database.h  databasemanager.cpp  databasemanager.h  databasetasks.cpp  databasetasks.h  definitions.h  depotchest.h  depotlocker.h  enums.h  events.cpp  events.h  fileloader.h  game.cpp  (+96 more)
src/tests/: CMakeLists.txt  test_base64.cpp  test_item.cpp  test_networkmessage.cpp  test_sha1.cpp  test_tools.cpp  test_xtea.cpp
tests/: Makefile  README.md
tests/cpp/: CMakeLists.txt  test_combat.cpp  test_condition.cpp  test_configmanager.cpp  test_database.cpp  test_item.cpp  test_player.cpp  test_position.cpp  test_tools.cpp  test_vocation.cpp  test_wildcardtree.cpp
tests/db/: test_migrations.py  test_queries.py  test_schema.sql
tests/integration/: test_docker.sh  test_login.py  test_login_860.py  test_player_create.py  test_server.py  test_server_boot.sh
tests/lua/: run_tests.lua  test_actions.lua  test_crafting.lua  test_crafting_integration.lua  test_events.lua  test_item_references.lua  test_items.lua  test_lib.lua  test_lib_loading.lua  test_monsters.lua  test_movements.lua  test_negative_cases.lua  test_new_systems.lua  test_npc_dialogues.lua  test_npcs.lua  test_spell_formulas.lua  test_spells.lua  test_storage_keys.lua  test_talkactions.lua  test_vocations.lua
tests/xml/: test_schema.py  validate_all.py  validate_items.py  validate_monsters.py  validate_npcs.py  validate_spells.py
vc14/: theforgottenserver.sln
(+3 files in other folders)
